Added MediatR and Login end Point

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,11 +2,25 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-QR3REC4\\SQLEXPRESS;Database=ABSchoolSharedDb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
+  "JwtSettings": {
+    "Secret": "This is my custom Secret key for authnetication",
+    "TokenExpirationInMinute": 60,
+    "RefreshTokenExpirationTimeInDays": 1
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SwaggerSettings": {
+    "Title": "ABSchool API",
+    "Description": "This is a documentation for ABSchool API",
+    "ContactName": "Aman Sinha",
+    "ContactEmail": "asrivas000@gmail.com",
+    "ContactUrl": "https://www.linkedin.com/in/aman-sinha-7b0b3b1b7/",
+    "LicenseName": "MIT",
+    "LicenseUrl": ""
   },
   "AllowedHosts": "*"
 }
